// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > data-driven items > matches the baseline markup snapshot for data-driven items 1`] = `
<div>
  <ul
    class="list"
  >
    <a
      aria-current="page"
      class="list-item list-action active"
      href="#"
    >
      Dashboard
    </a>
    <a
      class="list-item list-action"
      href="#"
    >
      Profile
    </a>
  </ul>
</div>
`;

exports[`List > rendering > matches the baseline markup snapshot 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="list-item"
    >
      A
    </li>
    <li
      class="list-item"
    >
      B
    </li>
    <li
      class="list-item"
    >
      C
    </li>
  </ul>
</div>
`;
